# project-chi-ed

./:  none.txt  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  wsgi.py
chi_ed/: REPORT.md  __init__.py  __main__.py
chi_ed/api_rc_merge/: merge_api_rc.py  merge_rc_dir.py  rc_zip.py
chi_ed/cps_api/: cleaning_api.py  fetching_api_data.py
chi_ed/merging/: merge_api_rc.py  merge_rc_dir.py  spatial_merge.py
chi_ed/report_card/: __main__.py  dataloader.py  s01_load.py  test.py
chi_ed/reports/: comparison.md  mapping.py  pdfs_utils.py  render.sh  render_report.md  reports.py  tabulation.py
chi_ed/schools/: clean.py  data.py  dataloader.py
chi_ed/spatial/: aggregation.py  bar_charts.py  base_map.py  dashboard.py  data.py
chi_ed/viz/: mapping.py  mapping_utils.py  pdfs_utils.py
code/: fetching_api_data.py
code/hacking/: s01_load.py  test.py
code/src/: data.py  dataloader.py  gen_pdfs.py
data/clean/: 2019_report_cards.csv  2020_report_cards.csv  2021_report_cards.csv  2022_report_cards.csv  2023_report_cards.csv  2024_report_cards.csv  2025_report_cards.csv  chicago_schools_map.html  clean_panel.csv  panel_report_cards.csv  schools.json  variables.json
data/outputs/: report_cards_2025.csv  reports_2025_finance_colnames.txt  reports_2025_general_colnames.txt  reports_2025_scores2_colnames.txt  reports_2025_scores_colnames.txt
data/raw_data/: test_data.csv
milestones/: final.md  milestone1.md  milestone2.md
outputs/: columns.json
tests/: test_aggregation.py  test_clean_api.py  test_fetch_api.py  test_reports.py
(+44 files in other folders)
