[project]
name = "project-chi-ed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "httpx[cli]>=0.28.1",
    "whsk>=0.3.1",
    "polars>=1.38.1",
    "ruff>=0.15.2",
    "matplotlib>=3.10.8",
    "fastexcel>=0.19.0",
    "altair>=6.0.0",
    "vl-convert-python>=1.9.0.post1",
    "great-tables>=0.21.0",
]
