[project]
name = "project-chi-ed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "httpx[cli]>=0.28.1",
    "whsk>=0.3.1",
    "polars>=1.38.1",
    "ruff>=0.15.2",
    "matplotlib>=3.10.8",
    "shapely>=2.1.2",
    "pyshp>=3.0.3",
    "geopandas>=1.1.2",
]
